[AUTO-8][add] content actions
